# WorldLine

./: .readthedocs.yaml  README.md  pyproject.toml
tests/: test_referenceframe.py
worldline/: model.py  specialrelativity.py  utilities.py
